--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,10 @@
 sudo: false
 language: ruby
+# listing only support rubies
 rvm:
-  - 2.0.0
-  - 2.1.10
-  - 2.2.9
-  - 2.3.6
-  - 2.4.3
-  - 2.5.0
-  - 2.6.0
+  - 2.4.9
+  - 2.5.7
+  - 2.6.5
   - 2.7.0
   
 before_install: gem install bundler -v 1.12.5
