--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,6 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
       - name: test
-        run: bin/rails test
+        run: bundle exec rake
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
